unused/linkerd-viz/ingressroute-dashboard.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linkerd
  namespace: linkerd-viz
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mesh.claytonc.dev`)
      kind: Rule
      middlewares: 
        - name: traefik-local-whitelist@kubernetescrd
        - name: traefik-l5d-header@kubernetescrd
      services:
      - name: web
        port: 8084
  tls:
    secretName: linkerd-tls
